# provenanssi

./: .gitignore  CLAUDE.md  FINDINGS.md  PUBLISH.md  README.md  falsify.py  pyproject.toml
demo/: ASSETS_LICENCE.md  index.html
demo/assets/: manifest.json
engine/: base.py  oracle.py  resshift.py
eval/: build_demo_assets.py  calibrate_domain_shift.py  calibrate_resshift.py  close_findings.py  close_findings_results.txt  content_driver_analysis.py  content_driver_results.txt  distance_metric.py  distance_metric_results.txt  distance_metric_v2.py  distance_metric_v2_results.txt  domain_shift_results.txt  faces_noise_floor.py  faces_noise_floor_results.txt  mechanism_gate_analysis.py  mechanism_gate_results.txt  phase1_assemble.py  phase1_commitment_results.txt  phase1_commitment_sanity.py  phase1_report.txt  phase2_analysis.py  phase2_results.txt  pre_registration.md  pre_registration_content_driver.md  pre_registration_mechanism_gate.md  pre_registration_robustness.md  robustness_analysis.py  robustness_results.txt  slope_noise_mechanism.py  slope_noise_mechanism_results.txt  smoke_resshift.py  smoke_torch.py  spatial_coherence.py  spatial_coherence_results.txt  stability_nscan.py  stability_nscan_results.txt  synthetic.py
eval/research_sources/: SOURCES_LICENCE.md
eval/research_sources/faces/: SOURCES.md
layer/: calibrate.py  classify.py  decompose.py  ensemble.py
operators/: base.py  bicubic.py  deblur.py  inpaint.py  superres.py
output/: calibration_resshift_bicubic_report.txt
tests/: test_calibrate.py  test_layer.py  test_operators.py
